# jobs-queue-process

./: Cargo.toml  LICENSE  Readme.md  Secrets.example.toml  docker-compose.yml  dockerfile
src/: client.rs  connection_check.rs  db.rs  db_connect.rs  env_config.rs  graphql.rs  http_client.rs  job_process.rs  mail.rs  main.rs  messages_route.rs  payload.rs  post_job.rs  post_job_route.rs  processor.rs  req_res_structs.rs  root_handle.rs  root_route.rs  sanity.rs  shopify_payload.rs  threads.rs
src/db/: common.rs  mongo.rs  redis.rs
src/db/mongo/: connect.rs  entities.rs  message.rs
src/db/mongo/message/: definition.rs  get_messages.rs  insert.rs
src/db/redis/: connect.rs
src/graphql/: helper_structs.rs  mutation_root.rs  query_root.rs  req_res_structs.rs
src/mail/: mail_template.rs  mailer.rs  send_mail.rs
src/root_route/: handle.rs  processing_thread.rs  queue_thread.rs
src/root_route/processing_thread/: category.rs  product_category.rs  product_sync.rs  upload_image.rs
src/root_route/processing_thread/product_category/: sanity.rs  shopify.rs
src/sanity/: http_endpoint.rs  http_payload.rs  http_response.rs  product_schema.rs  schema.rs  utils.rs
src/sanity/base/: reference.rs
src/sanity/root/: image.rs  seo.rs
src/sanity/schema/: category.rs  product.rs  root.rs
src/sanity/schema/root/: image.rs  link.rs  seo.rs
src/shopify/: admin_product.rs  product.rs
src/shopify_payload/: admin_product.rs  collection.rs  product.rs  product_payload.rs
src/threads/: process_jobs.rs  queue_jobs.rs  queue_thread.rs
templates/: messages.html
