[package]
name = "sanity-custom-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
redis-work-queue = "0.1.6"
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11.22", features = ["json"]}
tracing = "0.1"
tracing-subscriber = "0.3"
nanoid = "0.4.0"
