[package]
name = "jobs-queue-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
redis = { version = "0.23.3", features = ["tokio-comp"] }
redis-work-queue = "0.1.6"
serde = { version = "1.0.189", features = [ "derive" ] }
serde_json = "1.0.107"
tokio = { version = "1.8", features = [ "full" ] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
mongodb = "2.7.0"
serde-email = "3.0.0"
async-graphql = "6.0.9"
async-graphql-axum = "6.0.9"
lettre = "0.11.1"
